feat (docs): add /crime-scene-reports
